// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Badge > should match snapshot 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-1 el-badge"
    data-is-reversed="false"
    role="status"
  >
    <span
      class="mocked-styled-2 el-badge-label"
    >
      Label
    </span>
  </div>
</DocumentFragment>
`;

exports[`Badge > should match snapshot with icon only 1`] = `
<DocumentFragment>
  <div
    aria-label="label"
    class="mocked-styled-1 el-badge"
    data-is-reversed="false"
    role="status"
  >
    <span
      class="mocked-styled-0 el-badge-icon"
    >
      <span
        class="mocked-styled-3 el-icon"
        style="font-size: 1rem;"
      >
        <svg
          fill="none"
          height="1em"
          role="img"
          style="font-size: 1rem;"
          title="Icon image with name add"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 11H13V4C13 3.44772 12.5523 3 12 3C11.4477 3 11 3.44772 11 4V11H4C3.44772 11 3 11.4477 3 12C3 12.5523 3.44772 13 4 13H11V20C11 20.5523 11.4477 21 12 21C12.5523 21 13 20.5523 13 20V13H20C20.5523 13 21 12.5523 21 12C21 11.4477 20.5523 11 20 11Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </span>
  </div>
</DocumentFragment>
`;

exports[`Badge > should match snapshot with icons and label 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-1 el-badge"
    data-is-reversed="false"
    role="status"
  >
    <span
      class="mocked-styled-0 el-badge-icon"
    >
      <span
        class="mocked-styled-3 el-icon"
        style="font-size: 1rem;"
      >
        <svg
          fill="none"
          height="1em"
          role="img"
          style="font-size: 1rem;"
          title="Icon image with name add"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 11H13V4C13 3.44772 12.5523 3 12 3C11.4477 3 11 3.44772 11 4V11H4C3.44772 11 3 11.4477 3 12C3 12.5523 3.44772 13 4 13H11V20C11 20.5523 11.4477 21 12 21C12.5523 21 13 20.5523 13 20V13H20C20.5523 13 21 12.5523 21 12C21 11.4477 20.5523 11 20 11Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </span>
    <span
      class="mocked-styled-2 el-badge-label"
    >
      Label
    </span>
    <span
      class="mocked-styled-0 el-badge-icon"
    >
      <span
        class="mocked-styled-3 el-icon"
        style="font-size: 1rem;"
      >
        <svg
          fill="none"
          height="1em"
          role="img"
          style="font-size: 1rem;"
          title="Icon image with name chevronDown"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 16.5041C11.7343 16.5057 11.479 16.4013 11.2904 16.2141L4.29396 9.21411C4.04044 8.96046 3.94142 8.59074 4.03422 8.24424C4.12702 7.89773 4.39753 7.62708 4.74385 7.53424C5.09018 7.44139 5.45971 7.54046 5.71324 7.79411L12 14.0941L18.2868 7.79411C18.6787 7.40199 19.3141 7.40199 19.7061 7.79411C20.098 8.18624 20.098 8.82199 19.7061 9.21411L12.7096 16.2141C12.521 16.4013 12.2657 16.5057 12 16.5041Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </span>
  </div>
</DocumentFragment>
`;

exports[`Badge > should match snapshot with reversed badge 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-1 el-badge"
    data-is-reversed="true"
    role="status"
  >
    <span
      class="mocked-styled-2 el-badge-label"
    >
      Label
    </span>
  </div>
</DocumentFragment>
`;

exports[`Badge > should match snapshot with success variant and label 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-1 el-badge"
    data-is-reversed="false"
    data-variant="success"
    role="status"
  >
    <span
      class="mocked-styled-2 el-badge-label"
    >
      Label
    </span>
  </div>
</DocumentFragment>
`;
